content/bootstrap/5.3/extend/icons.md
---
weight: 2
linkTitle: Íconos
title: Conjuntos de íconos listos para usar en Bootstrap · Bootstrap en Español v5.3
description: Orientación y sugerencias para usar bibliotecas de íconos externas con Bootstrap.
next: /bootstrap/5.3/about
noindex: true
---

# Conjuntos de íconos listos para usar en Bootstrap

Orientación y sugerencias para usar bibliotecas de íconos externas con Bootstrap.

{{< content-ads/top-banner >}}

Si bien Bootstrap no incluye un conjunto de íconos predeterminado, tenemos nuestra propia biblioteca de íconos completa llamada Bootstrap Icons. Siéntete libre de usarlos o cualquier otro ícono configurado en tu proyecto. Hemos incluido detalles para los íconos Bootstrap y otros conjuntos de íconos preferidos a continuación.

Si bien la mayoría de los conjuntos de íconos incluyen múltiples formatos de archivo, preferimos las implementaciones SVG por su accesibilidad mejorada y compatibilidad con vectores.

Bootstrap Icons {#bootstrap-icons}
-----------------------------------

Bootstrap Icons es una biblioteca en crecimiento de íconos SVG diseñada por [@mdo](https://github.com/mdo) y mantenida por [el equipo de Bootstrap](https://github.com/orgs/twbs/people). Los inicios de este conjunto de íconos provienen de los propios componentes de Bootstrap: nuestros formularios, carruseles y más. Bootstrap necesita muy pocos íconos listos para usar, por lo que no necesitábamos muchos. Sin embargo, una vez que nos pusimos en marcha, no pudimos dejar de producir más.

Ah, ¿y mencionamos que son completamente de código abierto? Con licencia del MIT, al igual que Bootstrap, nuestro conjunto de iconos está disponible para todos.

[Obtén más información sobre los íconos Bootstrap](https://icons.getbootstrap.com), incluido cómo instalarlos y su uso recomendado.

Alternativas {#alternatives}
-----------------------------

Hemos probado y utilizado estos conjuntos de íconos como alternativas preferidas a los íconos Bootstrap.

* [Font Awesome](https://fontawesome.com)
* [Feather](https://feathericons.com)
* [Octicons](https://primer.style/octicons)

Más opciones {#more-options}
-----------------------------

Si bien no los hemos probado nosotros mismos, parecen prometedores y ofrecen múltiples formatos, incluido SVG.

{{< bootstrap/content-suggestion >}}

* [Bytesize](https://github.com/danklammer/bytesize-icons)
* [CoreUI Icons](https://icons.coreui.io)
* [Google Material icons](https://fonts.google.com/icons)
* [Ionicons](https://ionic.io/ionicons)
* [Dripicons](http://demo.amitjakhu.com/dripicons)
* [Ikons](http://ikons.piotrkwiatkowski.co.uk)
* [Icons8](https://icons8.com)
* [icofont](https://icofont.com)
* [Tabler Icons](https://tabler-icons.io)

{{< content-ads/bottom-banner >}}